--- a/RepairLogServer/RepairLogServer.csproj
+++ b/RepairLogServer/RepairLogServer.csproj
@@ -68,9 +68,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Database\Status.cs" />
+    <Compile Include="Migrations\202404251138182_secondMigration.cs" />
+    <Compile Include="Migrations\202404251138182_secondMigration.Designer.cs">
+      <DependentUpon>202404251138182_secondMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Workspace\Add.xaml.cs">
       <DependentUpon>Add.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Workspace\Edit.xaml.cs">
+      <DependentUpon>Edit.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Workspace\Iraqaholic.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -90,6 +99,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Workspace\Add.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Workspace\Edit.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -115,6 +128,9 @@
     </Compile>
     <EmbeddedResource Include="Migrations\202404190831423_firstMigration.resx">
       <DependentUpon>202404190831423_firstMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202404251138182_secondMigration.resx">
+      <DependentUpon>202404251138182_secondMigration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
